<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.kov</groupId>
    <artifactId>parser</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>jar</packaging>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <exec.mainClass>com.kov.javalessons.Parser</exec.mainClass>
    </properties>
    <name>test</name>
    <dependencies>
          <dependency> 
            <groupId>org.jsoup</groupId> 
            <artifactId>jsoup</artifactId> 
            <version>1.16.1</version> 
        </dependency>
        <!-- https://mvnrepository.com/artifact/com.opencsv/opencsv -->
        <dependency>
            <groupId>com.opencsv</groupId>
            <artifactId>opencsv</artifactId>
            <version>5.8</version>
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>org.realityforge.javax.annotation</groupId>
            <artifactId>javax.annotation</artifactId>
            <version>1.0.1</version>
            <type>jar</type>
        </dependency>
    </dependencies>
</project>